--- a/index.html
+++ b/index.html
@@ -21,5 +21,32 @@
 </head>
 <body>
     
+    <header>
+
+        <div class="container">
+
+            <nav id="nav-bar">
+                <div class="logo">
+                    <a href=""><img src="img/logo.png" alt=""></a>
+                </div>
+                <div class="menu">
+                    <a href=""><i class="fa-solid fa-bars"></i></a>
+                </div>
+            </nav>
+
+            <nav id="hidden-nav-bar">
+                <ul>
+                    <li><a href="">Planning</a></li>
+                    <li><a href="">Testimonials</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="" class="btn">Get Started</a></li>
+                </ul>
+            </nav>
+
+        </div>
+
+    </header>
+
 </body>
 </html>
