add: first section (try demo)

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+
     <header>
 
         <div class="container">
 
             <nav id="nav-bar">
                 <div class="logo">
-                    <a href=""><img src="img/logo.png" alt=""></a>
+                    <a href=""><img src="img/logo.png" alt="Logo"></a>
                 </div>
                 <div class="menu">
                     <a href=""><i class="fa-solid fa-bars"></i></a>
@@ -47,6 +47,52 @@
         </div>
 
     </header>
+
+    <main>
+
+        <div class="container">
+
+            <section id="try-demo">
+                <div class="card">
+                    <div class="text-card">
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi tempore qui molestias, nisi quibusdam quod facere id accusantium, corporis odio dicta voluptatem inventore sint tempora distinctio asperiores cumque consequuntur quia?</p>
+                        <div class="btn">
+                            <a href=""><i class="fa-brands fa-apple"></i><span>A p p</span><span>S t o r e</span></a>
+                        </div>
+                    </div>
+                    <img src="img/phone.png" alt="Imagine phone">
+                </div>
+
+                <div class="card">
+                    <i class="fa-solid fa-file-code"></i>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita laborum ratione dicta impedit consequuntur obcaecati sed quaerat eligendi sunt, cum, dolorum culpa tenetur? Eum, aperiam minus quaerat accusantium quibusdam impedit!</p>
+                </div>
+
+                <div class="card">
+                    <i class="fa-solid fa-compass-drafting"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita laborum ratione dicta impedit consequuntur obcaecati sed quaerat eligendi sunt, cum, dolorum culpa tenetur? Eum, aperiam minus quaerat accusantium quibusdam impedit!</p>
+                </div>
+
+                <div class="card">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h2>Developement</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita laborum ratione dicta impedit consequuntur obcaecati sed quaerat eligendi sunt, cum, dolorum culpa tenetur? Eum, aperiam minus quaerat accusantium quibusdam impedit!</p>
+                </div>
+
+                <div class="card">
+                    <i class="fa-solid fa-bullhorn"></i>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita laborum ratione dicta impedit consequuntur obcaecati sed quaerat eligendi sunt, cum, dolorum culpa tenetur? Eum, aperiam minus quaerat accusantium quibusdam impedit!</p>
+                </div>
+                
+            </section>
+
+        </div>
+
+    </main>
 
 </body>
 </html>
