add: second section (planning)

--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
 
         </div>
 
+        <section id="planning">
+
+            <div class="container">
+
+                <div>
+                    <img src="img/planning1.png" alt="Thinking girl">
+                    <h2 class="planning-title">Strategic Planning</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia totam accusantium architecto excepturi inventore facilis at exercitationem ipsam reprehenderit quidem perferendis iusto dignissimos itaque reiciendis fugiat enim, in voluptatum doloribus.</p>
+                </div>
+
+            
+                <div class="card">
+                    <img src="img/planning2.png" alt="Thinking boy">
+                    <h2>App Developement</h2>
+                    <p>Develop an on-demand app for you delivery business to reach your targeted customers without any interruption.</p>
+                    <a href=""><i class="fa-solid fa-arrow-down-long"></i></a>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
