--- a/index.html
+++ b/index.html
@@ -114,6 +114,44 @@
 
         </section>
 
+        <section id="partners">
+
+            <div class="container">
+
+                <div class="partners-title">
+                    <p>TESTIMONIALS</p>
+                    <h2>We are committed expert partners</h2>
+                    <p>We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right</p>
+                </div>
+
+                <div class="card">
+                    <div class="partner-img"></div>
+                    <div>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio excepturi minima fuga odit accusantium, possimus iure? Mollitia error temporibus pariatur expedita consequatur consectetur odio, quisquam iure soluta, quam nihil corrupti. <i class="fa-solid fa-quote-right"></i></p>
+                        <h6>NAT REYNOLDS</h6>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="partner-img"></div>
+                    <div>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio excepturi minima fuga odit accusantium, possimus iure? Mollitia error temporibus pariatur expedita consequatur consectetur odio, quisquam iure soluta, quam nihil corrupti. <i class="fa-solid fa-quote-right"></i></p>
+                        <h6>CELIA ALMEDA</h6>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="partner-img"></div>
+                    <div>
+                        <p><i class="fa-solid fa-quote-left"></i> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio excepturi minima fuga odit accusantium, possimus iure? Mollitia error temporibus pariatur expedita consequatur consectetur odio, quisquam iure soluta, quam nihil corrupti. <i class="fa-solid fa-quote-right"></i></p>
+                        <h6>BOB ROBERTS</h6>
+                    </div>
+                </div>
+                
+            </div>
+
+        </section>
+
     </main>
 
 </body>
