--- a/index.html
+++ b/index.html
@@ -152,6 +152,59 @@
 
         </section>
 
+        <section id="benefits">
+
+            <div class="container">
+
+                <h2>Benefits of working with us</h2>
+                <div class="row-benefits">
+                    <div class="card">
+                        <span>01</span>
+                        <h3>Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+
+                    <div class="card">
+                        <span>02</span>
+                        <h3>Creative Team</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+
+                    <div class="card">
+                        <span>03</span>
+                        <h3>Amazing Results</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+
+                    <div class="card">
+                        <span>04</span>
+                        <h3>Best Pricing</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+
+                    <div class="card">
+                        <span>05</span>
+                        <h3>Innovations</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+
+                    <div class="card">
+                        <span>06</span>
+                        <h3>24/7 Support</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut cumque vel blanditiis optio quaerat. Similique ab magni, dolores error fuga saepe blanditiis vitae ipsa harum, beatae nisi accusamus cumque. Fugiat!</p>
+                        <a href="" class="btn">more</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
