add: fifth section (about us)

--- a/index.html
+++ b/index.html
@@ -205,6 +205,26 @@
 
         </section>
 
+        <section id="about-us">
+
+            <div class="container">
+
+                <div class="about-text">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, minima dolorem impedit odio optio maiores placeat voluptatibus omnis natus, a aperiam tempore assumenda nisi deserunt, temporibus suscipit architecto expedita esse?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos possimus officiis et deserunt in! Molestiae quasi porro aliquam perferendis laboriosam quaerat rem minus tempora! Quisquam possimus maxime voluptatibus at laborum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, corporis dolor! Quos odit pariatur nulla blanditiis, veritatis accusantium ad deleniti quod esse provident, nobis hic recusandae asperiores similique voluptates voluptatum.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, aut deleniti totam quam aperiam odit minima temporibus, ab rem fuga corrupti velit vel cupiditate at quis maxime officia voluptatibus officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit nihil porro facere hic accusantium deleniti exercitationem, magni doloremque tempore quisquam quae deserunt ducimus placeat culpa dolore consequatur adipisci voluptatum quidem!</p>
+                </div>
+
+                <div class="about-img">
+                    <div class="ceo-img"><i class="fa-solid fa-quote-left"></i></div>
+                    <p>I help companies tincidunt tortor aliquam nulla facilisi cars fermentum odio.</p>
+                    <a href="" class="btn"><i class="fa-brands fa-linkedin"></i> Fin me on linkedin</a>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
