add: CTO section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,22 @@
 
         </section>
 
+        <section id="cta">
+
+            <div class="container">
+
+                <span>GET STARDED</span>
+                <h3>Simple, Transparent Pricing</h3>
+                <strong>It's Free!</strong>
+                <p>We're still in beta and we will be for awhile. As we add more <br>
+                functionality, we'll look into other plans with more controls.</p>
+                <a href="" class="btn">Get  Started</a>
+                <p>Copyright 2021 Boolean ● Classe XX ● <a href="">Privacy policy</a></p>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
