--- a/index.html
+++ b/index.html
@@ -243,5 +243,17 @@
 
     </main>
 
+    <footer>
+
+        <div class="container">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis suscipit laboriosam harum facere voluptatum natus vitae.</p>
+
+            <p><a href="">Lorem ipsum</a> scelerisque mauris pellentesque <a href="">Boolean careers</a></p>
+
+        </div>
+
+    </footer>
+
 </body>
 </html>
